Added API aith via headers, added account creation, finished match entry form
