# API/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "description": "API for 40k ranking",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "title": "40k API"
   },
   "host": "hackedo.io",
@@ -17,7 +17,7 @@
   "securityDefinitions": {
     "FBApiKeyAuth": {
       "type": "apiKey",
-      "in": "query",
+      "in": "header",
       "name": "X-FB-API-Key"
     }
   },
@@ -143,15 +143,6 @@
         "security": [
           {
             "FBApiKeyAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "X-FB-API-Key",
-            "in": "query",
-            "type": "string",
-            "description": "FB token",
-            "required": true
           }
         ],
         "responses": {
